# stm32l4-blinky

./: .gitignore  README.md  cross.txt  meson.build  meson_options.txt
src/: meson.build
subprojects/: libc.wrap  nucleo_l4r5zi.wrap
